# agno-ai-labs

./: README.md  article.md  coding_article.md  post.txt  prompt.txt  pyproject.toml  results.md  t.py  test.xlsx  test2.xlsx
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt
jobs/: agent_resume.py  job_description.md  resume--.md  resume.md  tailored_resume.md
output/: article_internet.md  data.xlsx  final.xlsx  post.txt  price_optimization.md  prompt.txt
scripts/: Firecrawl.py  agent_knowledge.py  agent_memory.py  agent_news.py  agent_yt.py  f.py  file_handling.py  hello_world.py  hello_world_eval.py  hitl.py  marketer.py  rag_PDF.py  reasoning.py  stock_analyst.py  tt.py  wiki.py  wiki_eval.py  yt.py
scripts/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt
scripts2/: Dockerfile  README.md  agent_on_guardrails.py  code_writer.py  content_insta-en.py  content_insta.py  content_writer.py  data_docs.py  requirements.txt
scripts2/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt
tmp/: memory.db
tmp/lancedb/projects.lance/_indices/fts/: .managed.json  meta.json
tmp/lancedb/projects.lance/_transactions/: 0-e8367692-9dd4-43a5-a055-437811a97053.txn  1-12a73806-c803-44f6-96b9-033ea12755a7.txn
tmp/lancedb/projects.lance/_versions/: 1.manifest  2.manifest
tmp/lancedb/projects.lance/data/: d86fbdae-07ce-4f88-9efa-bcf511f61af2.lance
