[project]
name = "agno-ai-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.2",
    "beautifulsoup4>=4.13.4",
    "firecrawl-py>=2.4.3",
    "google-genai>=1.12.1",
    "google-generativeai>=0.8.5",
    "lxml-html-clean>=0.4.2",
    "newspaper3k>=0.2.8",
]
