[project]
name = "agno-ai-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.2",
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.0.1",
    "firecrawl-py>=2.4.3",
    "google-genai>=1.12.1",
    "google-generativeai>=0.8.5",
    "groq>=0.23.1",
    "lancedb>=0.22.0",
    "lxml-html-clean>=0.4.2",
    "newspaper3k>=0.2.8",
    "numpy==1.26.4",
    "openai>=1.76.2",
    "pandas>=2.2.3",
    "pgvector>=0.4.1",
    "psycopg>=3.2.7",
    "pylance>=0.26.1",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.40",
    "tantivy>=0.22.2",
    "youtube-transcript-api>=1.0.3",
]
